--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   <img class="join-logo-header" src="./assets/img/join-logo.svg" alt="join-logo">
   <div class="headline-header">
     <b >Kanban Project Management Tool</b>
