--- a/styles/loginpage.css
+++ b/styles/loginpage.css
@@ -1,8 +1,6 @@
-/* Global Css */
 .dNone {
   display: none;
 }
-/* end */
 
 * {
   margin: 0;
@@ -19,6 +17,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: rgba(246, 247, 248, 1);
+  z-index: 999;
 }
 
 .join-logo {
@@ -45,7 +44,6 @@ body {
   padding: 5px 5px 5px 5px;
 }
 
-/* transparen Animation */
 .animationJoinLogo.animated {
   animation: containerAnimation 625ms forwards;
   animation-delay: 1.8s;
@@ -69,15 +67,15 @@ body {
     opacity: 0.2;
   }
 
-  95% {
-    visibility: hidden;
+  90% {
+    opacity: 0.2;
   }
   100% {
+    visibility: hidden;
     opacity: 0;
   }
 }
 
-/* move Animation */
 @keyframes logoAnimation {
   0% {
     height: 334px;
@@ -124,11 +122,6 @@ body {
   animation-delay: 1.5s;
   animation-fill-mode: forwards;
 }
-
-/* end */
-
-/* style Log in */
-
 .logo-sign-up-container {
   display: flex;
   justify-content: space-between;
@@ -350,10 +343,6 @@ body {
   color: rgba(41, 171, 226, 1);
 }
 
-/* end */
-
-/* style Sign up*/
-
 .sign-up-container {
   display: flex;
   align-items: center;
@@ -480,7 +469,7 @@ body {
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1100px) {
   .animationJoinLogo {
     background-color: rgba(42, 54, 71, 1);
   }
@@ -540,10 +529,24 @@ body {
   .submit-log-in-container {
     gap: 10px;
   }
+  .sign-up-container {
+    width: 396px;
+    height: 595px;
+    position: relative;
+    top: 0;
+    gap: 0;
+  }
+  .arrow-back-sign-up-container {
+    top: 36px;
+  }
 }
 
 @media (max-width: 500px) {
   .log-in-container {
+    width: 320px;
+  }
+
+  .sign-up-container {
     width: 320px;
   }
 
@@ -558,4 +561,40 @@ body {
   .remember-me-container {
     width: 240px;
   }
+
+  .headline-log-in {
+    font-size: 37px !important;
 }
+}
+
+@media (max-height: 700px) {
+  .headline-log-in {
+    margin-top: 22px;
+}
+  .sign-up-container {
+    margin-top: 58px;
+    height: 460px;
+  }
+
+  .arrow-back-sign-up-container {
+    top: 22px;
+    left: 32px;
+}
+
+  .input-log-in {
+    gap: 8px; 
+}
+
+.input-field-container {
+  height: 40px;
+}
+
+.accept-privacy-policy-container {
+  padding-top: 8px;
+}
+
+.submit-sign-up-container {
+  padding-top: 0;
+}
+}
+
