--- a/styles/board.css
+++ b/styles/board.css
@@ -77,7 +77,7 @@
     border-radius: 8px;
     border: 2px solid var(--Version-2-main-color, #2A3647);
 }
-
+/* Large Card */
 .cardA {
     display: flex;
     width: 252px;
@@ -92,5 +92,28 @@
     box-sizing: border-box;
     /* shadoe backlog box */
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
+    cursor: pointer;
+    transition: transform 0.3s ease; 
 
+}
+.cardA:hover{
+    transform: rotate(10deg);
+}
+
+.smallCardTaskText {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.smallCardTaskText {
+    display: flex;
+}
+.smallTaskDescription {
+    color: #4f4a4a;
+}
+
+.smallCardFooter {
+    display: flex;
 }
