--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -428,6 +428,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .priorityUrgent{
+    cursor: pointer;
     display: flex;
     padding: 16px 10px;
     justify-content: center;
@@ -463,6 +464,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .priorityMedium{
+    cursor: pointer;
     display: flex;
     padding: 16px 10px;
     justify-content: center;
@@ -494,6 +496,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .priorityLow{
+    cursor: pointer;
     display: flex;
     padding: 16px 10px;
     justify-content: center;
