sidebar von boarad to board geändert

--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -22,7 +22,7 @@
         <div id="sidebarCategoryBorard" class="sidebarCategory" onclick="renderBoardHTML()">
           <div class="sidebarLink">
             <img class="sidebarIMG" src="./assets/img/Icons_board.png" />
-            <div class="sidebarMenuText">Borard</div>
+            <div class="sidebarMenuText">Board</div>
           </div>
         </div>
         <div id="sidebarCategoryContacts" class="sidebarCategory" onclick="render_contactsHtml()">
