--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,60 +1,69 @@
 /* Allround Class */
 
-
+body {
+  background-color: #e5e5e6;
+}
 
 .summaryMain {
-    width: calc(100% - 23px);
-    height: calc(100vh - 96px);
-    background: #e5e5e6;
-    margin-top: 77px;
-    margin-left: 232px;
-    font-family: 'Inter', sans-serif;
+  width: 100vw;
+  height: 100vh;
+  background: #e5e5e6;
+  margin-left: 232px;
+  font-family: "Inter", sans-serif;
 }
 
 .summaryContainer {
-    margin-left: 96px;
-    display: flex;
-    justify-content: space-around;
+  margin-left: 96px;
+  display: flex;
+  justify-content: space-around;
 }
 
 /* Linke Seite des Mains */
 .summaryLeft {
-    margin-top: 110px;
-    max-width: 560px;
+  margin-top: 48px;
+  max-width: 560px;
 }
 
 /* Der Header */
 .summaryHeader {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    margin-bottom: 56px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 56px;
 }
 
 .summaryHeader h1 {
-    font-size: 61px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
+  font-size: 61px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
 }
 
 .blueLineText {
-    display: flex;
-    align-items: center;
-    gap: 30px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }
 
 .blueLine {
-    height: 59px;
-    border-right: 3px solid #29ABE2;
+  height: 59px;
+  border-right: 3px solid #29abe2;
+}
+
+.blueLineResponsive {
+  height: 3px;
+  width: 90px;
+  background-color: #29abe2;
+  position: absolute;
+  top: 290px;
 }
 
 .summaryKey {
-    font-size: 27px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
+  font-size: 27px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
 }
 
 /* header ende */
@@ -62,252 +71,429 @@
 /* Übersicht der Aufgaben */
 
 .summaryTaskContainer {
-    display: flex;
-    width: 560px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 28px;
+  display: flex;
+  width: 560px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 28px;
 }
 
 /* Die zweit Buttons oben */
 .summaryTodoDone {
-    display: flex;
-    width: 560px;
-    height: 168px;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 32px;
+  display: flex;
+  width: 560px;
+  height: 168px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
 }
 
 .summaryTodoDone a {
-    display: flex;
-    width: 40%;
-    height: auto;
-    padding: 19px;
-    justify-content: center;
-    align-items: center;
-    gap: 18px;
-    flex-shrink: 0;
-    border-radius: 30px;
-    background: white;
-    text-decoration: none;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+  display: flex;
+  width: 40%;
+  height: auto;
+  padding: 19px;
+  justify-content: center;
+  align-items: center;
+  gap: 18px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: white;
+  text-decoration: none;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
 /* der Button in der Mitte */
 .summaryUrgendDeadLine {
-    display: flex;
-    width: 560px;
-    height: 168px;
-    padding: 27px 30px;
-    justify-content: center;
-    align-items: center;
-    gap: 61px;
-    flex-shrink: 0;
-    border-radius: 30px;
-    background: white;
-    box-sizing: border-box;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
-    text-decoration: none;
+  display: flex;
+  width: 560px;
+  height: 168px;
+  padding: 27px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 61px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: white;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
 }
 
 .urgend {
-    display: flex;
-    align-items: center;
-    gap: 18px;
+  display: flex;
+  align-items: center;
+  gap: 18px;
 }
 
 .partingLine {
-    width: 2px;
-    color: black;
-    height: 80%;
-    background-color: #a8a8a8;
+  width: 2px;
+  color: black;
+  height: 80%;
+  background-color: #a8a8a8;
 }
 
 .deadline {
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 
 #date {
-    color: #2A3647;
-    font-family: Inter;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
+  color: #2a3647;
+  font-family: Inter;
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
 }
 
 /* Die Drei Button Unten */
 .summaryTasks {
-    display: flex;
-    width: 560px;
-    height: 170px;
-    padding: 1px 0px;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 28px;
+  display: flex;
+  width: 560px;
+  height: 170px;
+  padding: 1px 0px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 28px;
 }
 
-.summaryTasks a{
-    text-decoration: none;
+.summaryTasks a {
+  text-decoration: none;
 }
 /* desing der Drei buttons */
 .taskspanels {
-    display: flex;
-    width: 168px;
-    height: 168px;
-    padding: 25px 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 13px;
-    flex-shrink: 0;
-    border-radius: 30px;
-    background: white;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+  display: flex;
+  width: 168px;
+  height: 168px;
+  padding: 25px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 13px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: white;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
 .tasksText {
-    color: #2A3647;
-    text-align: center;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-    text-decoration: none;
+  color: #2a3647;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  text-decoration: none;
 }
 
 .tasksNumber {
-    color: #000;
-    text-align: center;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%;
+  color: #000;
+  text-align: center;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%;
 }
-
 
 /* left End */
 
-
 /* RightSide */
 .summaryRight {
-    width: 50%;
-    height: calc(100vh - 100px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 3px;
+  width: 50%;
+  height: calc(100vh - 350px);
+  display: flex;
+  align-items: center;
+  gap: 3px;
 }
 .greetin {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10px;
+  margin-right: 48px !important;
 }
 .greetin h2 {
-    color: #2A3647;
-    /* font-family: Inter; */
-    font-size: 47px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 120%;
+  color: #2a3647;
+  /* font-family: Inter; */
+  font-size: 47px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
 }
-.greetin p{
-    width: 385px;
-    color: var(--Ligth-blue, #29ABE2);
-    font-family: Inter;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
+.greetin p {
+  width: 385px;
+  color: var(--Ligth-blue, #29abe2);
+  font-family: Inter;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
 }
 
 .user-name {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 /* Rightend */
 
 /* text Inside Dialog */
 .toDoIcon {
-    width: 69px;
-    height: 69px;
+  width: 69px;
+  height: 69px;
 }
 
 .taskNumber {
-    color: #000;
-    text-align: center;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%;
+  color: #000;
+  text-align: center;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%;
 }
 
 .taskText {
-    color: #2A3647;
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-
+  color: #2a3647;
+  /* Version 2/t6 */
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
 }
 
 .deadLineText {
-    color: #2A3647;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-    display: flex;
+  color: #2a3647;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  display: flex;
 }
 
 /* Hover */
 .toDoPanel:hover,
 .toDoPanelBig:hover,
 .taskspanels:hover {
-    transform: scale(1.05);
-    background: #2A3647;
-    transition: 225ms ease-in-out;
-    color: white;
+  transform: scale(1.05);
+  background: #2a3647;
+  transition: 225ms ease-in-out;
+  color: white;
 }
 
 .toDoPanel:hover .editHover img {
-    content: url('../assets/img/editeWhite.png');
+  content: url("../assets/img/editeWhite.png");
 }
 
 .toDoPanel:hover .checkhover img {
-    content: url('../assets/img/checkwhite.png');
+  content: url("../assets/img/checkwhite.png");
 }
 
 .toDoPanel:hover .taskNumber,
 .toDoPanel:hover .taskText {
-    color: white;
+  color: white;
 }
 
 .toDoPanelBig:hover #date {
-    color: white;
+  color: white;
 }
 
 .toDoPanelBig:hover .deadLineText {
-    color: white;
+  color: white;
 }
 
 .toDoPanelBig:hover .taskNumber,
 .toDoPanelBig:hover .taskText {
-    color: white;
+  color: white;
 }
 .taskspanels:hover .tasksNumber,
 .taskspanels:hover .tasksText {
-    color: white
-    
+  color: white;
 }
 .partingLine:hover {
-    background-color: white;
+  background-color: white;
+}
+
+@media (max-width: 1500px) {
+  .greetin {
+    display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .summaryMain {
+    display: flex;
+    justify-content: center;
+    margin-left: 0;
+  }
+
+  .summaryHeader {
+    margin-bottom: 24px;
+}
+
+  .summaryContainer {
+    margin-left: 0;
+  }
+
+  .summaryTaskContainer {
+    gap: 12px;
+}
+
+.summaryTodoDone {
+  height: 144px;
+}
+}
+
+@media (min-width: 650px) {
+  .blueLineResponsive {
+    display: none;
+  }
+}
+
+@media (max-width: 650px) {
+  .summaryHeader {
+    flex-direction: column;
+    margin-left: 56px;
+    gap: 16px;
+    margin-bottom: 56px;
+  }
+
+  .blueLine {
+    display: none;
+  }
+
+  .summaryTodoDone {
+    height: 114px;
+  }
+
+  .summaryTodoDone a {
+    width: 30%;
+  }
+
+  .toDoIcon {
+    transform: scale(0.6);
+  }
+
+  .taskNumber {
+    font-size: 47px;
+  }
+
+  .tasksNumber {
+    font-size: 47px;
+  }
+
+  .taskText {
+    font-size: 14px;
+  }
+
+  .tasksText {
+    font-size: 14px;
+  }
+
+  .summaryUrgendDeadLine {
+    display: flex;
+    justify-content: center;
+    width: 450px !important;
+    margin-left: 56px;
+    height: 128px;
+  }
+
+  .urgend {
+    width: 140px;
+  }
+
+  #date {
+    font-size: 14px;
+  }
+
+  .deadLineText {
+    font-size: 14px;
+  }
+
+  .taskspanels {
+    width: 130px;
+    height: 116px;
+    padding: 25px 0px;
+    gap: 13px;
+  }
+  .summary-headline {
+    font-size: 61px !important;
+  }
+
+  .tasksText {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .blueLineResponsive {
+    margin-bottom: 24px;
+  }
+
+  .summaryHeader {
+    margin-left: 124px;
+  }
+
+  .summaryHeader {
+    flex-direction: column;
+    gap: 16px;
+    margin-bottom: 56px;
+  }
+
+  .summaryTodoDone a {
+    padding: 10px;
+    width: 22%;
+    gap: 12px;
+  }
+
+  .summaryTodoDone {
+    gap: 20px;
+    height: 100px;
+  
+  }
+
+  .toDoIcon {
+    transform: scale(0.6);
+  }
+
+  .taskNumber {
+    font-size: 32px;
+  }
+
+  .taskText {
+    font-size: 12px;
+  }
+
+  .summaryUrgendDeadLine {
+    margin-left: 124px;
+    width: 308px !important;
+  }
+
+  .urgend-svg {
+    transform: scale(0.6);
+  }
+
+  .urgend {
+    gap: 8px;
+    width: 84px !important;
+  }
+
+
+  #date {
+    font-size: 10px;
+    width: 50px !important;
+  }
+
+  .deadLineText {
+    font-size: 10px;
+    width: 50px !important;
+  }
+
+  .taskspanels {
+    width: 84px;
+    height: 84px;
+  }
 }
