--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -37,7 +37,7 @@ hr{
 .contact-list{
     background-color: white;
     margin-left: 280px;
-    margin-top: 110px;
+    margin-top: 10px;
     width: 30%;
     height: 88vh;
     -webkit-box-shadow: 3px 0px 4px -4px rgba(77,77,77,0.53);
@@ -46,7 +46,7 @@ hr{
     overflow: scroll;
 }
 .contact-details{
-    margin-top: 100px;
+    margin-top: 0px;
     width: 60%;
     height: 100vh;
     background-color: #F6F7F8;
@@ -560,7 +560,6 @@ justify-content: center;
     border-radius: 12px;
     width: 250px;
     right: -200%;
-
     background-color: #293647;
     color: white;
     text-align: center;
@@ -595,6 +594,7 @@ justify-content: center;
 	-webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
+
 
 .mini-popup{
     display: none;
@@ -643,6 +643,9 @@ justify-content: center;
               transform: translateY(-100px);
     }
   }
+
+  
+
   @keyframes slide-top {
     0% {
       -webkit-transform: translateY(0);
@@ -709,6 +712,7 @@ justify-content: center;
         margin-left: 10px;
         margin-top: 10px;
         width: 40%;
+        height: 78vh;
     }
     .contact-details{
         margin-top: 0;
@@ -1051,4 +1055,10 @@ justify-content: center;
     .nameIdEdit {
         font-size: 40px;
     }
+    .success {
+        -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    }
+
+
 }
