--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -376,6 +376,14 @@ justify-content: center;
     margin-right: 18px;
     align-items: center;
   }
+.editCard-mini{
+    margin-top: 12px;
+    margin-left: 12px;
+    margin-bottom: 12px;
+}
+.deleteCard-mini{
+    margin-left: 12px;
+}
   .logo-mini{
     width: 20px; 
     height: 20px; 
@@ -609,16 +617,52 @@ justify-content: center;
     border-top-right-radius: 15px;
     height: 90px;
     width: 100px;
+    transition: right 1s ease-in-out;
 }
 .mini-popup-display{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items:flex-start;
+
 }
 .contacts-headline-arrow{
     display: none;
 }
+.slideInRight {
+    -webkit-animation-name: slideInRight;
+    animation-name: slideInRight;
+    -webkit-animation-duration: 1s;
+    animation-duration: 0.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    }
+
+@-webkit-keyframes slideInRight {
+    0% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    visibility: visible;
+    }
+    100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    }
+    }
+@keyframes slideInRight {
+    0% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    visibility: visible;
+    }
+    100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    }
+    } 
+
+
+
+
 
  @keyframes slide-left {
     0% {
@@ -767,7 +811,7 @@ justify-content: center;
         width: 100%;
         margin-left: 30px;
         margin-top: 30px;
-        height: 74vh;
+        height: 78vh;
     }
     .slide-left{
         animation: none;
@@ -779,7 +823,7 @@ justify-content: center;
         border: 1px solid var(--Version-2-main-color, #2A3647);
         background: var(--Version-2-main-color, #2A3647);
         cursor: pointer;
-        display: block;
+        display: flex;
         justify-content: center;
         align-items: center;
         position: fixed;
@@ -1022,8 +1066,8 @@ justify-content: center;
     .closeEditContact-mobile{
         display: block;
         position: fixed;
-    right: 20px;
-    top: 225px;
+        right: 20px;
+        top: 225px;
     }
     .line2{
         margin-bottom: 100px;
@@ -1033,7 +1077,6 @@ justify-content: center;
         position: fixed;
         margin-top: 0px;
         margin-left: 0px;
-
     }
     .contacts-headline-arrow{
         display: block;
@@ -1059,6 +1102,4 @@ justify-content: center;
         -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
         animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
-
-
 }
