--- a/styles/board.css
+++ b/styles/board.css
@@ -256,6 +256,39 @@
     align-items: center;
 }
 
+.popUpWindow{
+    position: fixed;
+    inset: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #8080808f;
+    z-index: 999;
+    transform: translateX(400%);
+    transition: 550ms ease-in-out;
+}
+.largeCardA{
+    height: 80%;
+    width: 400px;
+    border: solid;
+    display: flex;
+    width: 525px;
+    padding: 48px 40px;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 24px ;
+
+    border-radius: 30px;
+    background: #FFF;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+}
+.largCardHeader {
+    width: 100%;
+    /* width: 100%; */
+    display: flex;
+    justify-content: space-between;
+}
+
 @media (max-width: 320px){
 
     .titleBoard{
