--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -40,20 +40,21 @@
 
   .contentTask {
     overflow: scroll !important;
-    max-height: 780px !important;
+    max-height:680px!important;
   }
 
-  .textContainer_addTask {
-    margin-top: 10px;
+  .textContainer_addTask {    
+    /* margin-top: 10px; */
     font-size: 47px;
     margin-left: 8px;
     width: 320px;   
   }
 
-  .group66_addTask {
+  .group66_addTask {  
     margin-left: 10px;
     flex-direction: column;
     justify-content: center;
+
   }
 
   .vector4 {
@@ -67,6 +68,7 @@
 
   .title_v1 {
     width: 10px;
+   
   }
 
   .title {
@@ -170,8 +172,6 @@
   }
 
   .options {
- 
-
     width: 265px;
   }
 
@@ -189,7 +189,7 @@
   }
 
   .addTasksFooter {  
-    margin-top: 20px;
+
     margin-bottom: 25px;
     margin-left: 12px;
     width: 300px;   
@@ -267,7 +267,7 @@
 
   .contentTask {
     overflow: scroll !important;
-    max-height: 750px !important;
+    max-height: 650px !important;
   }
 
   .textContainer_addTask {
@@ -443,7 +443,7 @@
 
   .contentTask {
     overflow: scroll !important;
-    max-height: 750px !important;
+    max-height: 650px !important;
   }
 
   .textContainer_addTask {
@@ -586,13 +586,13 @@
 
 
 @media (min-width: 1000px) and (max-width: 1149px) {
-
   .box-sizingResponsiv{
     display: none;
   }
+
   .contentTask {
     overflow: scroll !important;
-    max-height: 860px !important;
+    max-height: 660px !important;
     margin-top: 68px; 
   }
 
@@ -601,7 +601,7 @@
   }
 
   .textContainer_addTask {
-    margin-top: 80px;
+    margin-top: 0px;
     margin-left: 290px;
   }
 
@@ -618,6 +618,7 @@
     height: 422px;
     width: 80%;
   }
+
   .title_v1{
     width: 780px;
   }
@@ -734,6 +735,7 @@
 
 @media (min-width: 1150px) and (max-width: 1300px) {
 
+
   .box-sizingResponsiv{
     display: none;
   }
@@ -742,12 +744,12 @@
     position: relative;
   }
 
+ 
   .recursor {
     display: none;
   }
 
   .textContainer_addTask {
-    margin-top: 80px;
     margin-left: 260px;
   }
 
